--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "eslint-plugin-react": "^6.7.1"
   },
   "dependencies": {
-    "winston": "^2.3.1",
     "color-convert": "^1.8.2",
+    "express": "^4.15.2",
     "mathjs": "^3.8.1",
+    "path": "^0.12.7",
     "request": "^2.79.0",
-    "path": "^0.12.7"
+    "winston": "^2.3.1"
   }
 }
