Added version information.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "commander": "^2.9.0",
     "express": "^4.15.2",
     "mathjs": "^3.8.1",
+    "merge": "^1.2.0",
     "mute": "^2.0.6",
     "path": "^0.12.7",
     "request": "^2.79.0",
